# BatteryLife

./: .gitignore  LICENSE  README.md  aging_conditions.py  dataset_overview_calculation.py  domainAdaptation.py  ds_config_zero2_baseline.json  evaluate_model.py  finetune.py  name2agingConditionID.json  pyproject.toml  run_main.py
.devcontainer/: devcontainer.json  docker-compose.yml  install-dev-tools.sh  requirements.txt  setup-ssh.sh
check_data_scripts/: check_soh_curves.ipynb  check_voltage_current_curves.ipynb
data_provider/: data_factory.py  data_loader.py  data_split_recorder.py
layers/: AGFAttention.py
models/: Autoformer.py  CNN.py  CPTransformer.py  DLinear.py  GRU.py  LSTM.py  MICN.py  MLP.py  PatchTST.py  Transformer.py  iTransformer.py
process_scripts/: preprocess_CALB.py  preprocess_CALCE.py  preprocess_HNEI.py  preprocess_HUST.py  preprocess_ISU_ILCC.py  preprocess_MATR.py  preprocess_MICH.py  preprocess_MICH_EXP.py  preprocess_NA.py  preprocess_RWTH.py  preprocess_SDU.py  preprocess_SNL.py  preprocess_Stanford.py  preprocess_Tongji.py  preprocess_UL_PUR.py  preprocess_XJTU.py  preprocess_ZNion.py  time_normalization_utils.py
train_eval_scripts/: Autoformer.sh  CNN.sh  CPBiGRU.sh  CPBiLSTM.sh  CPGRU.sh  CPLSTM.sh  CPMLP.sh  CPTransformer.sh  DLinear.sh  MICN.sh  MLP.sh  PatchTST.sh  bias_entimate.py  domain_adaptation_script.sh  evaluate.sh  finetune_script.sh  iTransformer.sh  optuna_search.py
utils/: tools.py  trackio_logging.py
visualization/: first_fig.py  plt_error_curves.ipynb
