[project]
name = "batterylife"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.29.3",
    "batteryml",
    "datasets==2.19.0",
    "deepspeed==0.15.0",
    "denseweight==0.1.2",
    "evaluate==0.4.1",
    "huggingface-hub>=0.36.2",
    "joblib==1.4.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "peft==0.12.0",
    "reformer-pytorch==1.4.4",
    "requests==2.32.3",
    "scikit-learn==1.4.2",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "sympy==1.12",
    "torch==2.4.1",
    "tqdm==4.66.2",
    "trackio>=0.17.0",
    "transformers==4.43.4",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
batteryml = { git = "https://github.com/microsoft/BatteryML.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
